# au-core-synthetic-data

./: .gitignore  .gitmodules  Makefile  README.md  compose.yml  download-mapper.sh  download-validator.sh  mapping-script.sh
.github/workflows/: build-and-save.yaml
mapping_script/: Makefile  config.yaml  pyproject.toml
mapping_script/mapping_results/: AU Core Sample Data - AllergyIntolerance.csv  AU Core Sample Data - Condition.csv  AU Core Sample Data - Encounter.csv  AU Core Sample Data - Immunization.csv  AU Core Sample Data - Medication.csv  AU Core Sample Data - Organization.csv  mapped_patients_info.yaml
mapping_script/mapping_script/: csv_cleaner.py  main.py
modules/: simple-hypertension.json
synthea/: Dockerfile  Makefile  compose.yml
synthea/modules/: encounter-observation-observation-condition-medication-encounter-end.json  simple-hypertension.json
